--- a/eo.html
+++ b/eo.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="h-100" lang="es">
+<html class="h-100" lang="eo">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pagina de Estela (Promontana)</title>
+    <title>Hejmpaĝo de Estela (Promontana)</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -26,14 +26,14 @@
               &nbsp;
               <a href="ug.html">ئۇيغۇرچە</a>
             </li>
-            <li class="breadcrumb-item active">
-              <i class="moji moji-es"></i>Español
+            <li class="breadcrumb-item">
+              <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item">
-              <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
+            <li class="breadcrumb-item active">
+              <i class="moji moji-eo"></i>Esperanto
             </li>
             <li class="breadcrumb-item">
               <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
@@ -61,7 +61,7 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 Depresión</span
+              >😔 Depression</span
             >
             <div class="card-body">
               <h2 class="card-title" style="margin-left: 130px">
@@ -88,7 +88,7 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>Grupo de Telegram</a
+                      ><i class="moji moji-telegram"></i>Telegrama Grupo</a
                     >
                   </td>
                 </tr>
@@ -106,24 +106,29 @@
                   </td>
                 </tr>
               </table>
-              <p>¡Hola! 👋🏻 Me llamo Estela.</p>
+              <p>Saluton 👋🏻 Jen Estela.</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
-                Orgullosa de ser trans. Contribuidora de
+                Fiera esti transgenra. Prizorganto de
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
-              <p>Me gusta falda tableada(JKs). 🍱 "Gourmet".</p>
               <p>
-                👩🏻‍🎓 Estoy estudiando español como especialidad en mi universidad.
+                🍱 "Gourmet". Denaska parolanto de
+                <a href="https://eo.wikipedia.org/wiki/Vua_lingvo">Vua lingvo</a
+                >.
               </p>
-              <p>📷 Fotógrafa. Videojuegos de ritmo: maimai y Sound Voltex.</p>
-              <p>✈️ Me encanta viajar. He viajado a varios continentes.</p>
-              <p>👀 Me interesan lingüística, NLP, y otras cosas.</p>
+              <p>👩🏻‍🎓 Mi specialiĝas pri hispana lingvo ĉe universitato.</p>
+              <p>📷 Fotisto. Ludanto de ritmaj ludoj.</p>
+              <p>✈️ Mi amas vojaĝi! Mi vojaĝis al multaj landoj.</p>
+              <p>👀 Interesas pri lingvistiko, NLP kaj aliaj aferoj.</p>
               <p>
                 ⌨️ <i class="moji moji-python"></i>Python
-                <i class="moji moji-php"></i>PHP
+                <del
+                  ><i class="moji moji-php"></i>PHP estas la plej bona lingvo en
+                  la mondo!</del
+                >
               </p>
-              <p>Usuaria de<i class="moji moji-archlinux"></i>ArchLinux.</p>
+              <p><i class="moji moji-archlinux"></i>Uzanto de ArchLinux.</p>
             </div>
           </div>
         </div>
@@ -144,7 +149,9 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
+        <span class="text-muted">
+          &copy;<span id="year"></span> Estela <a href="amigos.html">Amikoj</a>
+        </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
