--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
-      .card img{
+      .card img {
         max-width: 100%;
       }
     </style>
@@ -23,12 +23,20 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
+              &nbsp;
+              <a href="ug.html">ئۇيغۇرچە</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
             </li>
           </ol>
         </nav>
@@ -104,17 +112,26 @@
                 Proudly being trans. Maintainer of
                 <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
-              <p>Skirt(JKs) lover. 🍱 "Gourmet". Wu language native speaker.</p>
+              <p>
+                Skirt(JKs) lover. 🍱 "Gourmet".
+                <a href="https://en.wikipedia.org/wiki/Wu_Chinese"
+                  >Wu language</a
+                >
+                native speaker.
+              </p>
               <p>👩🏻‍🎓 Majoring in Spanish language at university.</p>
               <p>
-                📷 Photographer. Rhythm game player, now stuck on
-                <i class="moji moji-maimai"></i>maimai and Sound Voltex.
+                📷 Photographer. Rhythm game player, now stuck on maimai and
+                Sound Voltex.
               </p>
               <p>✈️ I love travelling! I've travelled to many countries.</p>
               <p>👀 Interested in linguistics, NLP and ML, and other things.</p>
               <p>
-                ⌨️ <i class="moji moji-python"></i>Python
-                <i class="moji moji-php"></i>PHP
+                ⌨️ <i class="moji moji-python"></i>Python<br />
+                <del
+                  ><i class="moji moji-php"></i>PHP is the best language in the
+                  world!</del
+                >
               </p>
               <p><i class="moji moji-archlinux"></i>ArchLinux user.</p>
               <p>
