--- a/lat.html
+++ b/lat.html
@@ -7,7 +7,7 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
-      .card img{
+      .card img {
         max-width: 100%;
       }
     </style>
@@ -23,12 +23,20 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
+              &nbsp;
+              <a href="ug.html">ئۇيغۇرچە</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
+            </li>
+            <li class="breadcrumb-item active">
+              <i class="moji moji-lat"></i>Lingua Latina
             </li>
           </ol>
         </nav>
@@ -107,8 +115,8 @@
               <p>🍱 "Gourmet".</p>
               <p>👩🏻‍🎓 Studiō lingua hispāna in ūniversitāte.</p>
               <p>
-                📷 Photographa. Iocōtora dē videolūdō rhythmus,
-                <i class="moji moji-maimai"></i>maimai et Sound Voltex.
+                📷 Photographa. Iocōtora dē videolūdō rhythmus, maimai et Sound
+                Voltex.
               </p>
               <p>✈️ Mē dēlectat viāre. Fēcī iter ad multōs pāgōs.</p>
               <p>👀 Mē interest linguistica.</p>
