--- a/zh.html
+++ b/zh.html
@@ -7,7 +7,7 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
-      .card img{
+      .card img {
         max-width: 100%;
       }
     </style>
@@ -22,13 +22,20 @@
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item active">
-              <i class="moji moji-cn"></i>中文
+              <i class="moji moji-cn"></i>中文 &nbsp;
+              <a href="ug.html">ئۇيغۇرچە</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="lat.html"><i class="moji moji-lat"></i>Lingua Latina</a>
             </li>
           </ol>
         </nav>
@@ -107,18 +114,12 @@
               </p>
               <p>JK格裙那可太喜欢了 🍱吃货 吴语母语者</p>
               <p>👩🏻‍🎓 现在在大学攻读西班牙语。</p>
-              <p>
-                📷 摄影。音游，<i class="moji moji-maimai"></i
-                >maimai陷入中，SDVX练习中。
-              </p>
+              <p>📷 摄影。音游，maimai陷入中，SDVX练习中。</p>
               <p>✈️ 想要周游世界的旅行者，去过好多国家了。</p>
               <p>👀 喜欢语言学、NLP、炼丹之类乱七八糟的东西。</p>
               <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
               <p>
-                <del
-                  >“<i class="moji moji-php"></i>PHP
-                  是世界上最好的语言！”你妈的太坑了</del
-                >
+                <del><i class="moji moji-php"></i>PHP 是世界上最好的语言！</del>
               </p>
               <p><i class="moji moji-archlinux"></i>ArchLinux 用户。</p>
               <p><img src="assets/images/feed.png" /><br />投食山前</p>
@@ -143,8 +144,11 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a><br>
-          <a href="https://icp.gov.moe/?keyword=20223233" target="_blank">萌ICP备20223233号</a>
+          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
+          <br />
+          <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
+            >萌ICP备20223233号</a
+          >
         </span>
       </div>
     </footer>
